Day 24 - Fixed height issues, sea now visible on all views. Fixed header styling on about page

--- a/src/components/about.module.less
+++ b/src/components/about.module.less
@@ -16,13 +16,23 @@
     text-shadow: 2px 2px 15px rgba(49,0,96,1);
     -webkit-animation: fade-in 0.75s ease forwards;
     animation: fade-in 0.75s ease forwards;
+
+    h2 {
+        font-size:9vw;
+      }
+    
+      @media (max-width: 1000px) {
+        h2 {
+          font-size:15vw !important;
+          }
+      }
 }
 
 .exit {
-	position:fixed;
-	bottom:2.25rem;
-	left:2.25rem;
-	font-size: 3rem;
+        position:fixed;
+        bottom:2.25rem;
+        right:2.25rem;
+        font-size: 3rem;
 }
 
 .button {
