--- a/src/components/contact.module.less
+++ b/src/components/contact.module.less
@@ -33,7 +33,7 @@
 .exit {
   position:fixed;
   bottom:2.25rem;
-  left:2.25rem;
+  right:2.25rem;
   font-size: 3rem;
 }
 
